<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment"
    tools:ignore="MissingDefaultResource">
    <fragment
        android:id="@+id/home_fragment"
        android:name="net.fpoly.dailymart.view.tab.home.HomeFragment"
        android:label="@string/app_name">
        <argument
            android:name="userMessage"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_home_fragment_to_receipt_fragment"
            app:destination="@id/receipt_fragment"
            app:popUpTo="@id/home_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_product_fragment"
            app:destination="@id/product_fragment"
            app:popUpTo="@id/home_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_show_more_fragment"
            app:destination="@id/show_more_fragment"
            app:popUpTo="@id/home_fragment" />
    </fragment>

    <fragment
        android:id="@+id/receipt_fragment"
        android:name="net.fpoly.dailymart.view.tab.receipt.ReceiptFragment"
        android:label="@string/receipt_fragment">
        <argument
            android:name="userMessage"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/product_fragment"
        android:name="net.fpoly.dailymart.view.tab.goods.GoodsFragment"
        android:label="@string/product_fragment">
        <argument
            android:name="userMessage"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/show_more_fragment"
        android:name="net.fpoly.dailymart.view.tab.show_more.ShowMoreFragment"
        android:label="@string/show_more_fragment">
        <argument
            android:name="userMessage"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>