<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/imbplexsans_medium"
            android:text="@string/qu_n_m_t_kh_u"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_forget_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/imbplexsans_medium"
        android:gravity="center"
        android:text="@string/vui_l_ng_nh_p_email_i_n_tho_i_ng_k_c_a_b_n"
        android:textColor="@color/gray_medium"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/ch_ng_t_i_s_g_i_m_x_c_minh_n_email_i_n_tho_i_ng_k_c_a_b_n"
        android:textColor="@color/gray_light"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ed_email_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/gray_medium"
        android:textSize="14sp"
        android:hint="@string/email_s_i_n_tho_i"
        android:padding="10dp" />

    <TextView
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/imbplexsans_medium"
        android:gravity="center"
        android:text="@string/g_i_m"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>