<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="net.fpoly.dailymart.view.login.LoginViewModel" />

        <variable
            name="viewModel"
            type="LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_light"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="8dp"
            android:text="Không có kết nối internet  !!!"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_app_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/imbplexsans_semibold"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/gray_medium"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_logo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/imbplexsans_semibold"
            android:text="Đăng nhập"
            android:textColor="@color/gray_medium"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ed_email_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_login"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/gray_primary"
            android:drawableStart="@drawable/ic_person_gray"
            android:drawablePadding="10dp"
            android:fontFamily="@font/imbplexsans_regular"
            android:hint="Số điện thoại"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingVertical="16dp"
            android:textColor="@color/gray_primary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email_phone"
            android:layout_marginHorizontal="35dp"
            android:text="@{viewModel.validatePhone}"
            android:textColor="@color/red_FF444C"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <RelativeLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email_phone"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/ed_password"
                set_input_type="@{viewModel.passwordStatus}"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/gray_primary"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="10dp"
                android:fontFamily="@font/imbplexsans_regular"
                android:hint="@string/m_t_kh_u"
                android:maxLines="1"
                android:paddingVertical="16dp"
                android:textColor="@color/gray_primary"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imv_show_password"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:src="@{viewModel.passwordStatus ? @drawable/ic_hide_password: @drawable/ic_show_password }" />

            <TextView
                android:id="@+id/tv_validate_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_password"
                android:text="@{viewModel.validatePassword}"
                android:textColor="@color/red_FF444C"
                android:textSize="10sp"
                android:visibility="gone"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_password"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/imbplexsans_regular"
            android:paddingVertical="10dp"
            android:text="@string/qu_n_m_t_kh"
            android:textColor="@color/gray_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/tv_forget_password"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/imbplexsans_medium"
            android:gravity="center"
            android:text="@string/ng_nh_p"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/btn_login"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gray_primary" />

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/imbplexsans_medium"
                android:text="@string/kh_ng_c_t_i_kho_n"
                android:textColor="@color/gray_light"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/imbplexsans_medium"
                android:text="@string/ng_ky"
                android:textColor="@color/pink_primary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</layout>
